Change where the class goes to fix a rendering bug
Leaflet doesn't want its div changing, it causes layout bugs where our
tab bar disappears. I moved the class name that represents the current
state of things to an adjacent div.

--- a/assets/css/_vehicle_map.scss
+++ b/assets/css/_vehicle_map.scss
@@ -52,7 +52,7 @@
     stroke-width: 1.8;
   }
 
-  .m-vehicle-map--auto-centering & a {
+  .m-vehicle-map-state--auto-centering + .m-vehicle-map & a {
     background-color: $color-button-disabled;
     color: $color-font-grey;
 
